test/testData/parser/negative/statements/return.err
test/testData/parser/negative/statements/return.c:5:3: error: returning 'signed int' from a function with result of incompatible type 'STRUCT S'
test/testData/parser/negative/statements/return.c:9:3: error: returning 'float' from a function with result of incompatible type '*signed int'
test/testData/parser/negative/statements/return.c:14:3: error: returning '*signed int' from a function with result of incompatible type 'float'
test/testData/parser/negative/statements/return.c:18:3: error: returning 'STRUCT S' from a function with result of incompatible type 'signed int'
